WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285412
[Site isolation] PDF links are not recorded as annotations if site-isolation is enabled
https://bugs.webkit.org/show_bug.cgi?id=285412
Summary
[Site isolation] PDF links are not recorded as annotations if site-isolation ...
Said Abou-Hallawa
Reported
2025-01-05 21:47:12 PST
Is site isolation is enabled, snapshotting the PDFPage has to happen in GPUProcess. The WebPage links are stored as link annotations in the PDFPage. This happens through RenderObject::addPDFURLRect() which calls GraphicsContext:: setURLForRect(). RecorderImpl and RemoteDisplayListRecorderProxy need to implement setURLForRect.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-05 21:47:53 PST
<
rdar://problem/142399120
>
Said Abou-Hallawa
Comment 2
2025-01-05 21:51:41 PST
https://github.com/WebKit/WebKit/pull/38554
Said Abou-Hallawa
Comment 3
2025-01-06 10:09:32 PST
Committed
288470@main
(e6b9114):
https://commits.webkit.org/288470@main
Reviewed commits have been landed. Closing PR #38554 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug